<resources>
    <string name="app_name">SmartInventory</string>

    <string name="hello">Hello blank fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">home</string>
    <string name="receive">receive</string>
    <string name="transfer">transfer</string>
    <string name="move">move order</string>
    <string name="transferFragment">transferFragment</string>
    <string name="receiveFragment">receiveFragment</string>

    <string name="tab_receive_receipt">Receipt</string>
    <string name="tab_receive_lot">Lot</string>
    <string name="tab_receive_item">Item</string>
    <string name="tab_receive_project">Project</string>

    <string name="in_item_item">Item / Revision</string>
    <string name="in_item_des">Description</string>

    <string name="in_item_lot_from">From</string>
    <string name="in_item_lot_to">To</string>

    <string name="text_confirm">Please type \"confirm\" to signout.</string>
    <string name="signout">Sign out</string>
    <string name="cancel">Cancel</string>

    <string name="id">id</string>
    <string name="des">description</string>
    <string name="stock">quantity</string>
    <string name="sales">Sales</string>
    <string name="predict">Predict</string>
    <string name="actual">Actual</string>
    <string name="error">Error</string>

    <string-array name="receive_list">
        <item>Item</item>
        <item>Lot</item>
        <item>Project</item>
        <item>Receipt</item>
    </string-array>

    <string-array name="org_list">
        <item>22ABC</item>
        <item>13DEF</item>
    </string-array>

</resources>
