<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/drawer_staff_name"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="username"
        android:visible="true"></item>

    <item android:title="Menu">
        <menu>
            <item
                android:id="@+id/rulesFragment"
                android:icon="@drawable/ic_system_receive_alt_black_24dp"
                android:title="@string/receive" />
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/ic_transfer_black_24dp"
                android:title="@string/transfer" />
            <item
                android:id="@+id/moveFragment"
                android:icon="@drawable/ic_swap_horiz_black_24dp"
                android:title="@string/move" />
        </menu>
    </item>
</menu>