<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white_trans">

        <EditText
            android:id="@+id/input_confirm_signout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen8"
            android:layout_marginTop="@dimen/dimen16"
            android:layout_marginRight="@dimen/dimen8"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/text_confirm"
            android:inputType="textPersonName"
            android:padding="@dimen/dimen8"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_header" />

        <TextView
            android:id="@+id/text_wrong_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CC1414"
            app:layout_constraintEnd_toEndOf="@+id/input_confirm_signout"
            app:layout_constraintStart_toStartOf="@+id/input_confirm_signout"
            app:layout_constraintTop_toBottomOf="@+id/input_confirm_signout" />

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dimen8"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen8"
                android:layout_marginRight="@dimen/dimen8"
                android:layout_weight="1"
                android:text="username"
                android:textColor="#009688"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen8"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_wrong_type">

            <Button
                android:id="@+id/button_cancel_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen8"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_signout"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signout" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>